# dentvoice-orchestrator-ai

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
apps/voice_orchestrator/: api.py  config.py  main.py  schemas.py  ws_twilio.py
core/: config.py  time_utils.py
core/audio/: resampler.py  vad.py
core/dialog_manager/: manager.py  memory.py  prompts.py  state_machine.py  states.py
core/llm_agent/: policy.py  tool_router.py  types.py
core/session/: models.py  redis_store.py  turn_counter.py
core/stt/: streaming_client.py
core/telephony/: twilio_events.py
core/tts/: streaming_client.py
observability/: logging.py
tests/: test_dialog_flow.py  test_idempotency.py
tools/: booking_tools.py  fake_backend.py  interface.py  schemas.py
