[project]
name = "dentvoice-orchestrator-ai"
version = "0.1.0"
description = "Production-grade real-time Voice AI Agent for Safir Tishlar dental clinic"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"